add authentication functionalities via google oauth and simple signup
